# fetchbin

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/fetchbin/api/: api.py  database.py  main.py  models.py  pages.py  routers.py  tcp_server.py
src/fetchbin/api/static/: main.js  style.css
src/fetchbin/api/templates/: about.html  base.html  delete.html  deleted.html  index.html  outputs.html  po-tos.html  view.html
src/fetchbin/cli/: constants.py  main.py
